fixed so product-title dont dissapear on small screens

--- a/src/components/Productcard.css
+++ b/src/components/Productcard.css
@@ -34,10 +34,10 @@
   width: 100%;
 }
 
-.storeCardStyle{
-   max-width: 345px;
-    margin: 2rem;
-    padding: 0 2rem;
+.storeCardStyle {
+  max-width: 345px;
+  margin: 2rem;
+  padding: 0 2rem;
 }
 
 @media (max-width: 480px) {
@@ -45,8 +45,17 @@
     height: 100%;
   }
 
-  .InfoContainer {
+  .item-short-info {
     display: none;
+  }
+
+  .InfoContainer {
+    height: auto;
+    color: black;
+  }
+
+  .InfoContainer > h2 {
+    font-size: 1.2rem;
   }
 
   .buttons button {
